--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <title>Slot Game</title>
   </head>
-  <body>
-    <div id="root" style="font-family: 'Rajdhani', sans-serif;"></div>
+  <body style="font-family: 'Rajdhani', sans-serif;" class="bg-[#0f0f0f]">
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
