--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <title>Slot Game</title>
   </head>
-  <body style="font-family: 'Rajdhani', sans-serif;" class="bg-[#0f0f0f]">
+  <body style="font-family: 'Rajdhani', sans-serif; background-color: #0f0f0f;">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
